<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AktywnoscDruga">


    <TextView
        android:id="@+id/etykieta2a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/etykieta_2a"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tekst2a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst_2a"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tekst2b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tekst2b" />

    <TextView
        android:id="@+id/etykieta2b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etykieta_2b"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tekst2b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/tekst2b"
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Wpisz odpowiedź"
        android:inputType="text"
        android:text="@string/tekst_2b"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etykieta2a" />

    <Button
        android:id="@+id/przycisk2a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:onClick="odeslijTekst"
        android:text="@string/przycisk_2a"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tekst2b" />
</androidx.constraintlayout.widget.ConstraintLayout>